force-app/main/default/objects/Consultation_Request__c/fields/Current_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Patient_Id__c</fullName>
    <formula>$User.Patient_Id__c == CASESAFEID(Patient__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Patient Id</label>
    <type>Checkbox</type>
</CustomField>