force-app/main/default/objects/Consultation_Request__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consultation Requests</relationshipLabel>
    <relationshipName>Consultation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>